src/y.output
Terminals unused in grammar

    DOUBLE_TOK
    CHAR_TOK
    TRUE
    FALSE
    LBRACK
    RBRACK
    BREAK
    CONTINUE
    SWITCH
    CASE
    DEFAULT
    EXTERN


State 153 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_decl_list

    2 global_decl_list: ε
    3                 | global_decl_list global_decl

    4 global_decl: const_decl
    5            | var_decl
    6            | func_decl

    7 local_decl: const_decl
    8           | var_decl

    9 const_decl: CONST type_spec ID ASSIGN expression SEMICOLON

   10 var_decl: type_spec var_init_list SEMICOLON

   11 var_init_list: var_init
   12              | var_init_list COMMA var_init

   13 var_init: ID
   14         | ID ASSIGN expression

   15 $@1: ε

   16 func_decl: type_spec ID LPAREN param_list_opt RPAREN LBRACE $@1 block_items_opt RBRACE

   17 $@2: ε

   18 func_decl: VOID_TOK ID LPAREN param_list_opt RPAREN LBRACE $@2 block_items_opt RBRACE

   19 param_list_opt: ε
   20               | param_list

   21 param_list: param
   22           | param_list COMMA param

   23 param: type_spec ID

   24 $@3: ε

   25 block: LBRACE $@3 block_items_opt RBRACE

   26 block_items_opt: ε
   27                | block_items

   28 block_items: block_items block_item
   29            | block_item

   30 block_item: local_decl
   31           | statement

   32 statement: simple_stmt
   33          | if_stmt
   34          | loop_stmt
   35          | return_stmt
   36          | proc_call SEMICOLON
   37          | block

   38 simple_stmt: assign_stmt
   39            | PRINT expression SEMICOLON
   40            | PRINTLN expression SEMICOLON
   41            | READ lvalue SEMICOLON
   42            | lvalue INC SEMICOLON
   43            | lvalue DEC SEMICOLON
   44            | INC lvalue SEMICOLON
   45            | DEC lvalue SEMICOLON
   46            | SEMICOLON

   47 assign_stmt: lvalue ASSIGN expression SEMICOLON

   48 lvalue: ID

   49 if_prefix: IF LPAREN expression RPAREN

   50 $@4: ε

   51 opt_else: ELSE $@4 statement
   52         | ε

   53 if_stmt: if_prefix statement opt_else

   54 loop_stmt: WHILE LPAREN expression RPAREN statement
   55          | DO statement WHILE LPAREN expression RPAREN SEMICOLON
   56          | FOR LPAREN for_simple_opt SEMICOLON expression SEMICOLON for_simple_opt RPAREN statement
   57          | FOREACH LPAREN ID COLON expression DOT DOT expression RPAREN statement

   58 for_simple_opt: ε
   59               | for_simple_item
   60               | for_simple_opt COMMA for_simple_item

   61 for_simple_item: assign_no_semi
   62                | PRINT expression
   63                | PRINTLN expression
   64                | READ lvalue
   65                | lvalue INC
   66                | lvalue DEC
   67                | INC lvalue
   68                | DEC lvalue

   69 assign_no_semi: lvalue ASSIGN expression

   70 return_stmt: RETURN expression SEMICOLON

   71 expression: expression PLUS expression
   72           | expression MINUS expression
   73           | expression MUL expression
   74           | expression DIV expression
   75           | expression MOD expression
   76           | expression LT expression
   77           | expression LE expression
   78           | expression GT expression
   79           | expression GE expression
   80           | expression EQ expression
   81           | expression NEQ expression
   82           | expression AND expression
   83           | expression OR expression
   84           | NOT expression
   85           | MINUS expression
   86           | PLUS expression
   87           | INC lvalue
   88           | DEC lvalue
   89           | lvalue INC
   90           | lvalue DEC
   91           | LPAREN expression RPAREN
   92           | lvalue
   93           | const_lit
   94           | func_call

   95 const_lit: INT_LIT
   96          | REAL_LIT
   97          | BOOL_LIT
   98          | STRING_LIT

   99 func_call: ID LPAREN arg_list_opt RPAREN

  100 proc_call: ID LPAREN arg_list_opt RPAREN

  101 arg_list_opt: ε
  102             | arg_list

  103 arg_list: expression
  104         | arg_list COMMA expression

  105 type_spec: INT_TOK
  106          | FLOAT_TOK
  107          | BOOL_TOK
  108          | STRING_TOK


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BOOL_TOK (258) 107
    FLOAT_TOK (259) 106
    DOUBLE_TOK (260)
    INT_TOK (261) 105
    CHAR_TOK (262)
    STRING_TOK (263) 108
    VOID_TOK (264) 18
    IF (265) 49
    ELSE (266) 51
    DO (267) 55
    WHILE (268) 54 55
    FOR (269) 56
    FOREACH (270) 57
    RETURN (271) 70
    CONST (272) 9
    PRINT (273) 39 62
    PRINTLN (274) 40 63
    READ (275) 41 64
    TRUE (276)
    FALSE (277)
    ID <sval> (278) 9 13 14 16 18 23 48 57 99 100
    INT_LIT <ival> (279) 95
    REAL_LIT <fval> (280) 96
    STRING_LIT <sval> (281) 98
    BOOL_LIT <bval> (282) 97
    LE (283) 77
    GE (284) 79
    EQ (285) 80
    NEQ (286) 81
    LT (287) 76
    GT (288) 78
    PLUS (289) 71 86
    MINUS (290) 72 85
    MUL (291) 73
    DIV (292) 74
    MOD (293) 75
    ASSIGN (294) 9 14 47 69
    NOT (295) 84
    AND (296) 82
    OR (297) 83
    INC (298) 42 44 65 67 87 89
    DEC (299) 43 45 66 68 88 90
    DOT (300) 57
    COMMA (301) 12 22 60 104
    COLON (302) 57
    SEMICOLON (303) 9 10 36 39 40 41 42 43 44 45 46 47 55 56 70
    LPAREN (304) 16 18 49 54 55 56 57 91 99 100
    RPAREN (305) 16 18 49 54 55 56 57 91 99 100
    LBRACK (306)
    RBRACK (307)
    LBRACE (308) 16 18 25
    RBRACE (309) 16 18 25
    BREAK (310)
    CONTINUE (311)
    SWITCH (312)
    CASE (313)
    DEFAULT (314)
    EXTERN (315)
    IFX (316)
    UPLUS (317)
    UMINUS (318)
    POSTINC (319)
    POSTDEC (320)


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    program (67)
        on left: 1
        on right: 0
    global_decl_list (68)
        on left: 2 3
        on right: 1 3
    global_decl (69)
        on left: 4 5 6
        on right: 3
    local_decl (70)
        on left: 7 8
        on right: 30
    const_decl <symbol> (71)
        on left: 9
        on right: 4 7
    var_decl (72)
        on left: 10
        on right: 5 8
    var_init_list (73)
        on left: 11 12
        on right: 10 12
    var_init <var_init_> (74)
        on left: 13 14
        on right: 11 12
    func_decl (75)
        on left: 16 18
        on right: 6
    $@1 (76)
        on left: 15
        on right: 16
    $@2 (77)
        on left: 17
        on right: 18
    param_list_opt <symbol_list> (78)
        on left: 19 20
        on right: 16 18
    param_list <symbol_list> (79)
        on left: 21 22
        on right: 20 22
    param <symbol> (80)
        on left: 23
        on right: 21 22
    block (81)
        on left: 25
        on right: 37
    $@3 (82)
        on left: 24
        on right: 25
    block_items_opt (83)
        on left: 26 27
        on right: 16 18 25
    block_items (84)
        on left: 28 29
        on right: 27 28
    block_item (85)
        on left: 30 31
        on right: 28 29
    statement (86)
        on left: 32 33 34 35 36 37
        on right: 31 51 53 54 55 56 57
    simple_stmt (87)
        on left: 38 39 40 41 42 43 44 45 46
        on right: 32
    assign_stmt (88)
        on left: 47
        on right: 38
    lvalue <symbol> (89)
        on left: 48
        on right: 41 42 43 44 45 47 64 65 66 67 68 69 87 88 89 90 92
    if_prefix (90)
        on left: 49
        on right: 53
    opt_else (91)
        on left: 51 52
        on right: 53
    $@4 (92)
        on left: 50
        on right: 51
    if_stmt (93)
        on left: 53
        on right: 33
    loop_stmt (94)
        on left: 54 55 56 57
        on right: 34
    for_simple_opt (95)
        on left: 58 59 60
        on right: 56 60
    for_simple_item (96)
        on left: 61 62 63 64 65 66 67 68
        on right: 59 60
    assign_no_semi (97)
        on left: 69
        on right: 61
    return_stmt (98)
        on left: 70
        on right: 35
    expression <expr_info> (99)
        on left: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94
        on right: 9 14 39 40 47 49 54 55 56 57 62 63 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 91 103 104
    const_lit <expr_info> (100)
        on left: 95 96 97 98
        on right: 93
    func_call <expr_info> (101)
        on left: 99
        on right: 94
    proc_call (102)
        on left: 100
        on right: 36
    arg_list_opt <expr_info_list> (103)
        on left: 101 102
        on right: 99 100
    arg_list <expr_info_list> (104)
        on left: 103 104
        on right: 102 104
    type_spec <type> (105)
        on left: 105 106 107 108
        on right: 9 10 16 23


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (global_decl_list)

    program           go to state 1
    global_decl_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: global_decl_list •
    3 global_decl_list: global_decl_list • global_decl

    BOOL_TOK    shift, and go to state 4
    FLOAT_TOK   shift, and go to state 5
    INT_TOK     shift, and go to state 6
    STRING_TOK  shift, and go to state 7
    VOID_TOK    shift, and go to state 8
    CONST       shift, and go to state 9

    $default  reduce using rule 1 (program)

    global_decl  go to state 10
    const_decl   go to state 11
    var_decl     go to state 12
    func_decl    go to state 13
    type_spec    go to state 14


State 3

    0 $accept: program $end •

    $default  accept


State 4

  107 type_spec: BOOL_TOK •

    $default  reduce using rule 107 (type_spec)


State 5

  106 type_spec: FLOAT_TOK •

    $default  reduce using rule 106 (type_spec)


State 6

  105 type_spec: INT_TOK •

    $default  reduce using rule 105 (type_spec)


State 7

  108 type_spec: STRING_TOK •

    $default  reduce using rule 108 (type_spec)


State 8

   18 func_decl: VOID_TOK • ID LPAREN param_list_opt RPAREN LBRACE $@2 block_items_opt RBRACE

    ID  shift, and go to state 15


State 9

    9 const_decl: CONST • type_spec ID ASSIGN expression SEMICOLON

    BOOL_TOK    shift, and go to state 4
    FLOAT_TOK   shift, and go to state 5
    INT_TOK     shift, and go to state 6
    STRING_TOK  shift, and go to state 7

    type_spec  go to state 16


State 10

    3 global_decl_list: global_decl_list global_decl •

    $default  reduce using rule 3 (global_decl_list)


State 11

    4 global_decl: const_decl •

    $default  reduce using rule 4 (global_decl)


State 12

    5 global_decl: var_decl •

    $default  reduce using rule 5 (global_decl)


State 13

    6 global_decl: func_decl •

    $default  reduce using rule 6 (global_decl)


State 14

   10 var_decl: type_spec • var_init_list SEMICOLON
   16 func_decl: type_spec • ID LPAREN param_list_opt RPAREN LBRACE $@1 block_items_opt RBRACE

    ID  shift, and go to state 17

    var_init_list  go to state 18
    var_init       go to state 19


State 15

   18 func_decl: VOID_TOK ID • LPAREN param_list_opt RPAREN LBRACE $@2 block_items_opt RBRACE

    LPAREN  shift, and go to state 20


State 16

    9 const_decl: CONST type_spec • ID ASSIGN expression SEMICOLON

    ID  shift, and go to state 21


State 17

   13 var_init: ID •
   14         | ID • ASSIGN expression
   16 func_decl: type_spec ID • LPAREN param_list_opt RPAREN LBRACE $@1 block_items_opt RBRACE

    ASSIGN  shift, and go to state 22
    LPAREN  shift, and go to state 23

    $default  reduce using rule 13 (var_init)


State 18

   10 var_decl: type_spec var_init_list • SEMICOLON
   12 var_init_list: var_init_list • COMMA var_init

    COMMA      shift, and go to state 24
    SEMICOLON  shift, and go to state 25


State 19

   11 var_init_list: var_init •

    $default  reduce using rule 11 (var_init_list)


State 20

   18 func_decl: VOID_TOK ID LPAREN • param_list_opt RPAREN LBRACE $@2 block_items_opt RBRACE

    BOOL_TOK    shift, and go to state 4
    FLOAT_TOK   shift, and go to state 5
    INT_TOK     shift, and go to state 6
    STRING_TOK  shift, and go to state 7

    $default  reduce using rule 19 (param_list_opt)

    param_list_opt  go to state 26
    param_list      go to state 27
    param           go to state 28
    type_spec       go to state 29


State 21

    9 const_decl: CONST type_spec ID • ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 30


State 22

   14 var_init: ID ASSIGN • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 43
    const_lit   go to state 44
    func_call   go to state 45


State 23

   16 func_decl: type_spec ID LPAREN • param_list_opt RPAREN LBRACE $@1 block_items_opt RBRACE

    BOOL_TOK    shift, and go to state 4
    FLOAT_TOK   shift, and go to state 5
    INT_TOK     shift, and go to state 6
    STRING_TOK  shift, and go to state 7

    $default  reduce using rule 19 (param_list_opt)

    param_list_opt  go to state 46
    param_list      go to state 27
    param           go to state 28
    type_spec       go to state 29


State 24

   12 var_init_list: var_init_list COMMA • var_init

    ID  shift, and go to state 47

    var_init  go to state 48


State 25

   10 var_decl: type_spec var_init_list SEMICOLON •

    $default  reduce using rule 10 (var_decl)


State 26

   18 func_decl: VOID_TOK ID LPAREN param_list_opt • RPAREN LBRACE $@2 block_items_opt RBRACE

    RPAREN  shift, and go to state 49


State 27

   20 param_list_opt: param_list •
   22 param_list: param_list • COMMA param

    COMMA  shift, and go to state 50

    $default  reduce using rule 20 (param_list_opt)


State 28

   21 param_list: param •

    $default  reduce using rule 21 (param_list)


State 29

   23 param: type_spec • ID

    ID  shift, and go to state 51


State 30

    9 const_decl: CONST type_spec ID ASSIGN • expression SEMICOLON

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 52
    const_lit   go to state 44
    func_call   go to state 45


State 31

   48 lvalue: ID •
   99 func_call: ID • LPAREN arg_list_opt RPAREN

    LPAREN  shift, and go to state 53

    $default  reduce using rule 48 (lvalue)


State 32

   95 const_lit: INT_LIT •

    $default  reduce using rule 95 (const_lit)


State 33

   96 const_lit: REAL_LIT •

    $default  reduce using rule 96 (const_lit)


State 34

   98 const_lit: STRING_LIT •

    $default  reduce using rule 98 (const_lit)


State 35

   97 const_lit: BOOL_LIT •

    $default  reduce using rule 97 (const_lit)


State 36

   86 expression: PLUS • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 54
    const_lit   go to state 44
    func_call   go to state 45


State 37

   85 expression: MINUS • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 55
    const_lit   go to state 44
    func_call   go to state 45


State 38

   84 expression: NOT • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 56
    const_lit   go to state 44
    func_call   go to state 45


State 39

   87 expression: INC • lvalue

    ID  shift, and go to state 57

    lvalue  go to state 58


State 40

   88 expression: DEC • lvalue

    ID  shift, and go to state 57

    lvalue  go to state 59


State 41

   91 expression: LPAREN • expression RPAREN

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 60
    const_lit   go to state 44
    func_call   go to state 45


State 42

   89 expression: lvalue • INC
   90           | lvalue • DEC
   92           | lvalue •

    INC  shift, and go to state 61
    DEC  shift, and go to state 62

    $default  reduce using rule 92 (expression)


State 43

   14 var_init: ID ASSIGN expression •
   71 expression: expression • PLUS expression
   72           | expression • MINUS expression
   73           | expression • MUL expression
   74           | expression • DIV expression
   75           | expression • MOD expression
   76           | expression • LT expression
   77           | expression • LE expression
   78           | expression • GT expression
   79           | expression • GE expression
   80           | expression • EQ expression
   81           | expression • NEQ expression
   82           | expression • AND expression
   83           | expression • OR expression

    LE     shift, and go to state 63
    GE     shift, and go to state 64
    EQ     shift, and go to state 65
    NEQ    shift, and go to state 66
    LT     shift, and go to state 67
    GT     shift, and go to state 68
    PLUS   shift, and go to state 69
    MINUS  shift, and go to state 70
    MUL    shift, and go to state 71
    DIV    shift, and go to state 72
    MOD    shift, and go to state 73
    AND    shift, and go to state 74
    OR     shift, and go to state 75

    $default  reduce using rule 14 (var_init)


State 44

   93 expression: const_lit •

    $default  reduce using rule 93 (expression)


State 45

   94 expression: func_call •

    $default  reduce using rule 94 (expression)


State 46

   16 func_decl: type_spec ID LPAREN param_list_opt • RPAREN LBRACE $@1 block_items_opt RBRACE

    RPAREN  shift, and go to state 76


State 47

   13 var_init: ID •
   14         | ID • ASSIGN expression

    ASSIGN  shift, and go to state 22

    $default  reduce using rule 13 (var_init)


State 48

   12 var_init_list: var_init_list COMMA var_init •

    $default  reduce using rule 12 (var_init_list)


State 49

   18 func_decl: VOID_TOK ID LPAREN param_list_opt RPAREN • LBRACE $@2 block_items_opt RBRACE

    LBRACE  shift, and go to state 77


State 50

   22 param_list: param_list COMMA • param

    BOOL_TOK    shift, and go to state 4
    FLOAT_TOK   shift, and go to state 5
    INT_TOK     shift, and go to state 6
    STRING_TOK  shift, and go to state 7

    param      go to state 78
    type_spec  go to state 29


State 51

   23 param: type_spec ID •

    $default  reduce using rule 23 (param)


State 52

    9 const_decl: CONST type_spec ID ASSIGN expression • SEMICOLON
   71 expression: expression • PLUS expression
   72           | expression • MINUS expression
   73           | expression • MUL expression
   74           | expression • DIV expression
   75           | expression • MOD expression
   76           | expression • LT expression
   77           | expression • LE expression
   78           | expression • GT expression
   79           | expression • GE expression
   80           | expression • EQ expression
   81           | expression • NEQ expression
   82           | expression • AND expression
   83           | expression • OR expression

    LE         shift, and go to state 63
    GE         shift, and go to state 64
    EQ         shift, and go to state 65
    NEQ        shift, and go to state 66
    LT         shift, and go to state 67
    GT         shift, and go to state 68
    PLUS       shift, and go to state 69
    MINUS      shift, and go to state 70
    MUL        shift, and go to state 71
    DIV        shift, and go to state 72
    MOD        shift, and go to state 73
    AND        shift, and go to state 74
    OR         shift, and go to state 75
    SEMICOLON  shift, and go to state 79


State 53

   99 func_call: ID LPAREN • arg_list_opt RPAREN

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    $default  reduce using rule 101 (arg_list_opt)

    lvalue        go to state 42
    expression    go to state 80
    const_lit     go to state 44
    func_call     go to state 45
    arg_list_opt  go to state 81
    arg_list      go to state 82


State 54

   71 expression: expression • PLUS expression
   72           | expression • MINUS expression
   73           | expression • MUL expression
   74           | expression • DIV expression
   75           | expression • MOD expression
   76           | expression • LT expression
   77           | expression • LE expression
   78           | expression • GT expression
   79           | expression • GE expression
   80           | expression • EQ expression
   81           | expression • NEQ expression
   82           | expression • AND expression
   83           | expression • OR expression
   86           | PLUS expression •

    $default  reduce using rule 86 (expression)


State 55

   71 expression: expression • PLUS expression
   72           | expression • MINUS expression
   73           | expression • MUL expression
   74           | expression • DIV expression
   75           | expression • MOD expression
   76           | expression • LT expression
   77           | expression • LE expression
   78           | expression • GT expression
   79           | expression • GE expression
   80           | expression • EQ expression
   81           | expression • NEQ expression
   82           | expression • AND expression
   83           | expression • OR expression
   85           | MINUS expression •

    $default  reduce using rule 85 (expression)


State 56

   71 expression: expression • PLUS expression
   72           | expression • MINUS expression
   73           | expression • MUL expression
   74           | expression • DIV expression
   75           | expression • MOD expression
   76           | expression • LT expression
   77           | expression • LE expression
   78           | expression • GT expression
   79           | expression • GE expression
   80           | expression • EQ expression
   81           | expression • NEQ expression
   82           | expression • AND expression
   83           | expression • OR expression
   84           | NOT expression •

    LE     shift, and go to state 63
    GE     shift, and go to state 64
    EQ     shift, and go to state 65
    NEQ    shift, and go to state 66
    LT     shift, and go to state 67
    GT     shift, and go to state 68
    PLUS   shift, and go to state 69
    MINUS  shift, and go to state 70
    MUL    shift, and go to state 71
    DIV    shift, and go to state 72
    MOD    shift, and go to state 73

    $default  reduce using rule 84 (expression)


State 57

   48 lvalue: ID •

    $default  reduce using rule 48 (lvalue)


State 58

   87 expression: INC lvalue •

    $default  reduce using rule 87 (expression)


State 59

   88 expression: DEC lvalue •

    $default  reduce using rule 88 (expression)


State 60

   71 expression: expression • PLUS expression
   72           | expression • MINUS expression
   73           | expression • MUL expression
   74           | expression • DIV expression
   75           | expression • MOD expression
   76           | expression • LT expression
   77           | expression • LE expression
   78           | expression • GT expression
   79           | expression • GE expression
   80           | expression • EQ expression
   81           | expression • NEQ expression
   82           | expression • AND expression
   83           | expression • OR expression
   91           | LPAREN expression • RPAREN

    LE      shift, and go to state 63
    GE      shift, and go to state 64
    EQ      shift, and go to state 65
    NEQ     shift, and go to state 66
    LT      shift, and go to state 67
    GT      shift, and go to state 68
    PLUS    shift, and go to state 69
    MINUS   shift, and go to state 70
    MUL     shift, and go to state 71
    DIV     shift, and go to state 72
    MOD     shift, and go to state 73
    AND     shift, and go to state 74
    OR      shift, and go to state 75
    RPAREN  shift, and go to state 83


State 61

   89 expression: lvalue INC •

    $default  reduce using rule 89 (expression)


State 62

   90 expression: lvalue DEC •

    $default  reduce using rule 90 (expression)


State 63

   77 expression: expression LE • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 84
    const_lit   go to state 44
    func_call   go to state 45


State 64

   79 expression: expression GE • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 85
    const_lit   go to state 44
    func_call   go to state 45


State 65

   80 expression: expression EQ • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 86
    const_lit   go to state 44
    func_call   go to state 45


State 66

   81 expression: expression NEQ • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 87
    const_lit   go to state 44
    func_call   go to state 45


State 67

   76 expression: expression LT • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 88
    const_lit   go to state 44
    func_call   go to state 45


State 68

   78 expression: expression GT • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 89
    const_lit   go to state 44
    func_call   go to state 45


State 69

   71 expression: expression PLUS • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 90
    const_lit   go to state 44
    func_call   go to state 45


State 70

   72 expression: expression MINUS • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 91
    const_lit   go to state 44
    func_call   go to state 45


State 71

   73 expression: expression MUL • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 92
    const_lit   go to state 44
    func_call   go to state 45


State 72

   74 expression: expression DIV • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 93
    const_lit   go to state 44
    func_call   go to state 45


State 73

   75 expression: expression MOD • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 94
    const_lit   go to state 44
    func_call   go to state 45


State 74

   82 expression: expression AND • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 95
    const_lit   go to state 44
    func_call   go to state 45


State 75

   83 expression: expression OR • expression

    ID          shift, and go to state 31
    INT_LIT     shift, and go to state 32
    REAL_LIT    shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    BOOL_LIT    shift, and go to state 35
    PLUS        shift, and go to state 36
    MINUS       shift, and go to state 37
    NOT         shift, and go to state 38
    INC         shift, and go to state 39
    DEC         shift, and go to state 40
    LPAREN      shift, and go to state 41

    lvalue      go to state 42
    expression  go to state 96
    const_lit   go to state 44
    func_call   go to state 45


State 76

   16 func_decl: type_spec ID LPAREN param_list_opt RPAREN • LBRACE $@1 block_items_opt RBRACE

    LBRACE  shift, and go to state 97


State 77

   18 func_decl: VOID_TOK ID LPAREN param_list_opt RPAREN LBRACE • $@2 block_items_opt RBRACE

    $default  reduce using rule 17 ($@2)

    $@2  go to state 98


State 78

   22 param_list: param_list COMMA param •

    $default  reduce using rule 22 (param_list)


State 79

    9 const_decl: CONST type_spec ID ASSIGN expression SEMICOLON •

    $default  reduce using rule 9 (const_decl)


State 80

   71 expression: expression • PLUS expression
   72           | expression • MINUS expression
   73           | expression • MUL expression
   74           | expression • DIV expression
   75           | expression • MOD expression
   76           | expression • LT expression
   77           | expression • LE expression
   78           | expression • GT expression
   79           | expression • GE expression
   80           | expression • EQ expression
   81           | expression • NEQ expression
   82           | expression • AND expression
   83           | expression • OR expression
  103 arg_list: expression •
